--- a/server/static/index.html
+++ b/server/static/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>{{ title }}</title>
+    <link rel="stylesheet" type="text/css" href="static/css/main.css">
 </head>
 <body>
 <h1>{{ title }}</h1>
